--- a/gsoc14-progress-week-6.html
+++ b/gsoc14-progress-week-6.html
@@ -6,22 +6,44 @@
         <link rel="stylesheet" href="http://www.sudhanshumishra.in/theme/css/main.css" />
         <link href="http://www.sudhanshumishra.in/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Shortlog Atom Feed" />
 
-        <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        <meta property="og:url" content="http://www.sudhanshumishra.in" />
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Shortlog" />
+        <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-6" />
+        <meta property="og:type" content="article" />
+        <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p>It was a busy week though I managed to do some&nbsp;work.</p>
+<p>I&#8217;ve been working on following&nbsp;things:</p>
+<ul>
+<li>Integrating <code>TWave</code> with <code>refraction_angle</code>(<a href="https://github.com/sympy/sympy/pull/7626">7626</a>)</li>
+<li>Interference&nbsp;class</li>
+</ul>
+<p>Some blocking 3D geometry code got merged yesterday which gives me a lot
+of new things to work on.&nbsp;:)</p>
+<p>I also tried to take a look on very old <a href="https://github.com/sympy/sympy/pull/1226">patch</a> for <code>gaussopt</code>.</p>
+<p>This week I wrote a script to update the development documentation when
+a <span class="caps">PR</span> gets merged into the master. This is up and&nbsp;running.</p>
+<p>I passed mid term evaluation that took place last week and I would like to
+thank <a href="https://github.com/flacjacket">Sean</a>, <a href="https://github.com/certik">Ondrej</a>,<a href="https://github.com/asmeurer">Aaron</a> and <a href="https://github.com/smichr">Chris</a> for their constant&nbsp;support.</p>
+<p>That&#8217;s all for&nbsp;now. Cheers!</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | article.title" />
+        <meta name="twitter:description" content="<p>It was a busy week though I managed to do some&nbsp;work.</p>
+<p>I&#8217;ve been working on following&nbsp;things:</p>
+<ul>
+<li>Integrating <code>TWave</code> with <code>refraction_angle</code>(<a href="https://github.com/sympy/sympy/pull/7626">7626</a>)</li>
+<li>Interference&nbsp;class</li>
+</ul>
+<p>Some blocking 3D geometry code got merged yesterday which gives me a lot
+of new things to work on.&nbsp;:)</p>
+<p>I also tried to take a look on very old <a href="https://github.com/sympy/sympy/pull/1226">patch</a> for <code>gaussopt</code>.</p>
+<p>This week I wrote a script to update the development documentation when
+a <span class="caps">PR</span> gets merged into the master. This is up and&nbsp;running.</p>
+<p>I passed mid term evaluation that took place last week and I would like to
+thank <a href="https://github.com/flacjacket">Sean</a>, <a href="https://github.com/certik">Ondrej</a>,<a href="https://github.com/asmeurer">Aaron</a> and <a href="https://github.com/smichr">Chris</a> for their constant&nbsp;support.</p>
+<p>That&#8217;s all for&nbsp;now. Cheers!</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta name="twitter:url" content="http://www.sudhanshumishra.in/" />
+        <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-6" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
-
 </head>
 
 <body id="index" class="home">
