--- a/gsoc-2014-with-sympy.html
+++ b/gsoc-2014-with-sympy.html
@@ -10,51 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>My proposal is intended to add more to optics in SymPy. Till now it can
-only do computations related to Gaussian optics and a bit of geometrical
-optics. <a href="https://github.com/certik">Ondřej Čertík</a> and <a href="https://github.com/flacjacket">Sean
-Vig</a> are my mentors for the&nbsp;project.</p>
-<p>For those who don&#8217;t know what is SymPy, SymPy is a Python library for
-symbolic computation. It provides computer algebra capabilities either
-as a standalone application, as a library to other applications, or live
-on the web as SymPy Live. SymPy is trivial to install and to inspect
-because is written entirely in Python and because it does not depend on
-any additional libraries. This ease of access combined with a simple and
-extensible code base in a well known language make SymPy a computer
-algebra system with a relatively low barrier to entry. SymPy is free
-software and is licensed under New <span class="caps">BSD</span> license. The lead developers are
-Ondřej Čertík and Aaron&nbsp;Meurer.</p>
-<p>Three more people other than me got selected for SymPy from my college,
-namely, Akshay, Sachin Joglekar and Soumya Dipta&nbsp;Biswas.</p>
-<p>During this <em>Community Bonding Period</em> I&#8217;ll try to get familiar with the
-huge code base of SymPy and its community of developers. I&#8217;m also
-working on few old pull requests that are dead for so&nbsp;long.</p>
-<p>Looking forward to work with such a great organization! Thanks to Google
-and SymPy for this&nbsp;opportunity!</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>My proposal is intended to add more to optics in SymPy. Till now it can
-only do computations related to Gaussian optics and a bit of geometrical
-optics. <a href="https://github.com/certik">Ondřej Čertík</a> and <a href="https://github.com/flacjacket">Sean
-Vig</a> are my mentors for the&nbsp;project.</p>
-<p>For those who don&#8217;t know what is SymPy, SymPy is a Python library for
-symbolic computation. It provides computer algebra capabilities either
-as a standalone application, as a library to other applications, or live
-on the web as SymPy Live. SymPy is trivial to install and to inspect
-because is written entirely in Python and because it does not depend on
-any additional libraries. This ease of access combined with a simple and
-extensible code base in a well known language make SymPy a computer
-algebra system with a relatively low barrier to entry. SymPy is free
-software and is licensed under New <span class="caps">BSD</span> license. The lead developers are
-Ondřej Čertík and Aaron&nbsp;Meurer.</p>
-<p>Three more people other than me got selected for SymPy from my college,
-namely, Akshay, Sachin Joglekar and Soumya Dipta&nbsp;Biswas.</p>
-<p>During this <em>Community Bonding Period</em> I&#8217;ll try to get familiar with the
-huge code base of SymPy and its community of developers. I&#8217;m also
-working on few old pull requests that are dead for so&nbsp;long.</p>
-<p>Looking forward to work with such a great organization! Thanks to Google
-and SymPy for this&nbsp;opportunity!</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc-2014-with-sympy" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
