--- a/gsoc14-progress-working-with-geometry.html
+++ b/gsoc14-progress-working-with-geometry.html
@@ -10,41 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>This week I completed <code>refraction_angle</code>. Now it also works with <code>Ray3D</code> and <code>Plane</code>. This function calculates transmitted vector after refraction. <code>medium1</code> and <code>medium2</code> can be <code>Medium</code>or any sympifiable&nbsp;object.</p>
-<p>If<code>incident</code> is an object of <code>Ray3D</code>, <code>normal</code> also has to be an instance of <code>Ray3D</code> in order to get the output as a <code>Ray3D</code>. If plane of separation is not provided and normal is an instance
-of <code>Ray3D</code>, normal will be assumed to be intersecting incident ray at the plane of separation. This will not be the case when <code>normal</code> is a <code>Matrix</code> or
-any other&nbsp;sequence.</p>
-<p>If <code>incident</code> is an instance of <code>Ray3D</code> and <code>plane</code> has not been provided and <code>normal</code> is not<code>Ray3D</code>,
-output will be a <code>Matrix</code>. It is dependent
-on <code>Plane</code> so I haven’t added tests for&nbsp;it.</p>
-<p>Here’s the link to the <span class="caps">PR</span> </p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7626</li>
-</ul>
-<p>This week I also worked on making spherical mirrors in SymPy. There are few issues that I am facing.
-Currently I’m working(stuck) on locating mirrors in space. It’s an amalgamation of 2D and 3D geometry. I still have to subclass Ray of geometry and make it useful for this. I’ve sent a <a href="https://github.com/sympy/sympy/pull/7686"><span class="caps">WIP</span>
-<span class="caps">PR</span></a></p>
-<p>I’m waiting for Sean to merge <a href="https://github.com/sympy/sympy/pull/7607">this</a> long waited <span class="caps">PR</span> for moving Gaussian optics&nbsp;module.</span></p>
-<p>That&#8217;s all for&nbsp;now.</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>This week I completed <code>refraction_angle</code>. Now it also works with <code>Ray3D</code> and <code>Plane</code>. This function calculates transmitted vector after refraction. <code>medium1</code> and <code>medium2</code> can be <code>Medium</code>or any sympifiable&nbsp;object.</p>
-<p>If<code>incident</code> is an object of <code>Ray3D</code>, <code>normal</code> also has to be an instance of <code>Ray3D</code> in order to get the output as a <code>Ray3D</code>. If plane of separation is not provided and normal is an instance
-of <code>Ray3D</code>, normal will be assumed to be intersecting incident ray at the plane of separation. This will not be the case when <code>normal</code> is a <code>Matrix</code> or
-any other&nbsp;sequence.</p>
-<p>If <code>incident</code> is an instance of <code>Ray3D</code> and <code>plane</code> has not been provided and <code>normal</code> is not<code>Ray3D</code>,
-output will be a <code>Matrix</code>. It is dependent
-on <code>Plane</code> so I haven’t added tests for&nbsp;it.</p>
-<p>Here’s the link to the <span class="caps">PR</span> </p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7626</li>
-</ul>
-<p>This week I also worked on making spherical mirrors in SymPy. There are few issues that I am facing.
-Currently I’m working(stuck) on locating mirrors in space. It’s an amalgamation of 2D and 3D geometry. I still have to subclass Ray of geometry and make it useful for this. I’ve sent a <a href="https://github.com/sympy/sympy/pull/7686"><span class="caps">WIP</span>
-<span class="caps">PR</span></a></p>
-<p>I’m waiting for Sean to merge <a href="https://github.com/sympy/sympy/pull/7607">this</a> long waited <span class="caps">PR</span> for moving Gaussian optics&nbsp;module.</span></p>
-<p>That&#8217;s all for&nbsp;now.</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-working-with-geometry" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
