--- a/linux-and-lenovo-essential-g580.html
+++ b/linux-and-lenovo-essential-g580.html
@@ -10,43 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Lenovo Essential G580 is the laptop which has highest number of conflicts with
-aLinux <span class="caps">OS</span>. The biggest problem is when you install a Linux <span class="caps">OS</span> you will
-<strong>lose access to your <span class="caps">BIOS</span> setup</strong> and that&#8217;s permanent. I faced this
-problem and I sent my laptop to service center to repair and they had to
-change its motherboard to fix this problem. When my laptop returned
-after repairing I installed Ubuntu 12.10 and lost my <span class="caps">BIOS</span> once again!&nbsp;:(</p>
-<p>Now I am using only Ubuntu 12.10 and not windows and that too without
-<span class="caps">BIOS</span> even if it&#8217;s under&nbsp;warranty.</p>
-<p>Now when the Ubuntu is installed, be prepared to face challenges! Ubuntu
-is supposed to carry each and every driver with it but unfortunately it
-doesn&#8217;t have the wired network driver for this laptop. After searching
-over the internet for hours I finally installed my network driver and
-uploaded the installer to Google drive for future.
-I solved one more issue of uncontrollable brightness of the screen by
-editing grub. Bluetooth automatically gets activated sometimes.
-There are uncountable number of problems. The only thing which you can
-do is to prevent yourself from buying this&nbsp;laptop.</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>Lenovo Essential G580 is the laptop which has highest number of conflicts with
-aLinux <span class="caps">OS</span>. The biggest problem is when you install a Linux <span class="caps">OS</span> you will
-<strong>lose access to your <span class="caps">BIOS</span> setup</strong> and that&#8217;s permanent. I faced this
-problem and I sent my laptop to service center to repair and they had to
-change its motherboard to fix this problem. When my laptop returned
-after repairing I installed Ubuntu 12.10 and lost my <span class="caps">BIOS</span> once again!&nbsp;:(</p>
-<p>Now I am using only Ubuntu 12.10 and not windows and that too without
-<span class="caps">BIOS</span> even if it&#8217;s under&nbsp;warranty.</p>
-<p>Now when the Ubuntu is installed, be prepared to face challenges! Ubuntu
-is supposed to carry each and every driver with it but unfortunately it
-doesn&#8217;t have the wired network driver for this laptop. After searching
-over the internet for hours I finally installed my network driver and
-uploaded the installer to Google drive for future.
-I solved one more issue of uncontrollable brightness of the screen by
-editing grub. Bluetooth automatically gets activated sometimes.
-There are uncountable number of problems. The only thing which you can
-do is to prevent yourself from buying this&nbsp;laptop.</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/linux-and-lenovo-essential-g580" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
