--- a/managing-commits-and-working-with-git-diff.html
+++ b/managing-commits-and-working-with-git-diff.html
@@ -10,101 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p><strong>tl;dr</strong>: This post assumes that you have basic knowledge of git. It&#8217;s
-just about managing commits and minimizing their numbers by having only
-meaningful&nbsp;ones.</p>
-<p>I&#8217;ve been working on a <span class="caps">PR</span> for around thirteen days which aims to fix a bug related to mathematical assumptions for inverse trigonometric functions in sympy. In order to do that I kept on committing changes
-randomly and number of commits went on increasing. As of now sympy has two types of mathematical assumptions we call it <strong>new</strong> and <strong>old</strong> so genuinely there should have been only two commits referring changes to
-respective&nbsp;types.</p>
-<p>I had two branches <code>master</code> and <code>arctrigo</code> I followed following steps to separate the changes done in both the&nbsp;assumptions:</p>
-<ul>
-<li>
-<p>First pull the changes from the remote to your <code>master</code> and merge it to your feature branch. In my case it was <code>arctrigo</code>.</p>
-</li>
-<li>
-<p>Make sure that you are no your feature branch and not on <code>master</code>.</p>
-</li>
-<li>
-<p>Create a diff with respect to <code>master</code>. <code>git diff master &gt; diff</code> (latter diff is just the filename, it could be&nbsp;anything)</p>
-</li>
-<li>
-<p>Create a new temporary branch of <code>master</code>. <code>git checkout master; git branch -b tmp</code>.</p>
-</li>
-<li>
-<p>Apply the patch. <code>git apply diff</code>.</p>
-</li>
-<li>
-<p>Use <code>git add -p</code> and you&#8217;ll be prompted change by change as to whether that change should be staged for committal. Say <code>y</code> to all changes involving one part and <code>n</code> to the&nbsp;others.</p>
-</li>
-</ul>
-<p>Here git has staged a set of changes for your next commit&nbsp;command.</p>
-<ul>
-<li>
-<p>Commit the changes for the first part, for which you said <code>y</code> in the prompts, by <code>git commit -m "your message for the first part"</code>. And then do <code>git commit -am "your message for the other part"</code> for which you said <code>n</code> in the&nbsp;prompts.</p>
-</li>
-<li>
-<p>Delete your feature branch. In my case it was <code>arctrigo</code> with <code>git branch -D arctrigo</code>.</p>
-</li>
-<li>
-<p>Create the same feature branch from <code>tmp</code> and switch to it. <code>git branch tmp; git checkout tmp</code>.</p>
-</li>
-<li>
-<p>Update your <span class="caps">PR</span> with <code>git push -f &lt;your_remote_name&gt; &lt;your_branch_name&gt;</code>.</p>
-</li>
-</ul>
-<p>Now navigate to your <span class="caps">PR</span> and you&#8217;ll see two clean commits. I just learned
-these things from <a href="https://github.com/smichr">Christopher</a> and decided
-to write a blog post about&nbsp;it.</p>
-<p>Cheers!</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p><strong>tl;dr</strong>: This post assumes that you have basic knowledge of git. It&#8217;s
-just about managing commits and minimizing their numbers by having only
-meaningful&nbsp;ones.</p>
-<p>I&#8217;ve been working on a <span class="caps">PR</span> for around thirteen days which aims to fix a bug related to mathematical assumptions for inverse trigonometric functions in sympy. In order to do that I kept on committing changes
-randomly and number of commits went on increasing. As of now sympy has two types of mathematical assumptions we call it <strong>new</strong> and <strong>old</strong> so genuinely there should have been only two commits referring changes to
-respective&nbsp;types.</p>
-<p>I had two branches <code>master</code> and <code>arctrigo</code> I followed following steps to separate the changes done in both the&nbsp;assumptions:</p>
-<ul>
-<li>
-<p>First pull the changes from the remote to your <code>master</code> and merge it to your feature branch. In my case it was <code>arctrigo</code>.</p>
-</li>
-<li>
-<p>Make sure that you are no your feature branch and not on <code>master</code>.</p>
-</li>
-<li>
-<p>Create a diff with respect to <code>master</code>. <code>git diff master &gt; diff</code> (latter diff is just the filename, it could be&nbsp;anything)</p>
-</li>
-<li>
-<p>Create a new temporary branch of <code>master</code>. <code>git checkout master; git branch -b tmp</code>.</p>
-</li>
-<li>
-<p>Apply the patch. <code>git apply diff</code>.</p>
-</li>
-<li>
-<p>Use <code>git add -p</code> and you&#8217;ll be prompted change by change as to whether that change should be staged for committal. Say <code>y</code> to all changes involving one part and <code>n</code> to the&nbsp;others.</p>
-</li>
-</ul>
-<p>Here git has staged a set of changes for your next commit&nbsp;command.</p>
-<ul>
-<li>
-<p>Commit the changes for the first part, for which you said <code>y</code> in the prompts, by <code>git commit -m "your message for the first part"</code>. And then do <code>git commit -am "your message for the other part"</code> for which you said <code>n</code> in the&nbsp;prompts.</p>
-</li>
-<li>
-<p>Delete your feature branch. In my case it was <code>arctrigo</code> with <code>git branch -D arctrigo</code>.</p>
-</li>
-<li>
-<p>Create the same feature branch from <code>tmp</code> and switch to it. <code>git branch tmp; git checkout tmp</code>.</p>
-</li>
-<li>
-<p>Update your <span class="caps">PR</span> with <code>git push -f &lt;your_remote_name&gt; &lt;your_branch_name&gt;</code>.</p>
-</li>
-</ul>
-<p>Now navigate to your <span class="caps">PR</span> and you&#8217;ll see two clean commits. I just learned
-these things from <a href="https://github.com/smichr">Christopher</a> and decided
-to write a blog post about&nbsp;it.</p>
-<p>Cheers!</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/managing-commits-and-working-with-git-diff" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
