--- a/gsoc-14-first-week.html
+++ b/gsoc-14-first-week.html
@@ -10,37 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>The first week of GSoC is going to end very soon. I started working very
-late this week because of some issues. I spent most of my time in
-reading books on&nbsp;optics.</p>
-<p>Due to a dependency for 3D geometry, which will take some more time, I
-changed my timeline from what I had proposed. Besides starting with
-geometrical optics(3 weeks), I have started working on wave&nbsp;optics.</p>
-<p>This is what my proposal&nbsp;says:</p>
-<ul>
-<li>During this week I&#8217;ll write code for classical wave equation and simple harmonic&nbsp;motion.</li>
-<li>Introduction of properties like phase angles, phase velocity, wave velocity, amplitude, intensity, frequency and&nbsp;wavelength. </li>
-</ul>
-<p><a href="https://github.com/sympy/sympy/pull/7518">This</a> is my first pull request regarding my project (Thanks to Sean for the quick review). Till now I&#8217;ve only added a transverse wave class and will add more to it in the next 2&nbsp;days.</p>
-<p>There were no hiccups&nbsp;yet!</p>
-<p>Cheers!</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>The first week of GSoC is going to end very soon. I started working very
-late this week because of some issues. I spent most of my time in
-reading books on&nbsp;optics.</p>
-<p>Due to a dependency for 3D geometry, which will take some more time, I
-changed my timeline from what I had proposed. Besides starting with
-geometrical optics(3 weeks), I have started working on wave&nbsp;optics.</p>
-<p>This is what my proposal&nbsp;says:</p>
-<ul>
-<li>During this week I&#8217;ll write code for classical wave equation and simple harmonic&nbsp;motion.</li>
-<li>Introduction of properties like phase angles, phase velocity, wave velocity, amplitude, intensity, frequency and&nbsp;wavelength. </li>
-</ul>
-<p><a href="https://github.com/sympy/sympy/pull/7518">This</a> is my first pull request regarding my project (Thanks to Sean for the quick review). Till now I&#8217;ve only added a transverse wave class and will add more to it in the next 2&nbsp;days.</p>
-<p>There were no hiccups&nbsp;yet!</p>
-<p>Cheers!</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc-14-first-week" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
