--- a/gsoc14-progress-finished-refraction-at-planar-surface.html
+++ b/gsoc14-progress-finished-refraction-at-planar-surface.html
@@ -10,23 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>I&#8217;m sorry for this delayed post. I couldn&#8217;t work last week due to some other issues so had nothing much to&nbsp;report.</p>
-<p>This week I completed refraction function for planar surface, fixed some bugs and wrote tests for it. I also added a function to calculate angle of deviation. Details can be found on the following&nbsp;link</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7626</li>
-</ul>
-<p>I&#8217;m waiting for Sean to start reviewing&nbsp;this.</p>
-<p>My next priority is to complete a pending <span class="caps">PR</span> on&nbsp;mirrors.</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>I&#8217;m sorry for this delayed post. I couldn&#8217;t work last week due to some other issues so had nothing much to&nbsp;report.</p>
-<p>This week I completed refraction function for planar surface, fixed some bugs and wrote tests for it. I also added a function to calculate angle of deviation. Details can be found on the following&nbsp;link</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7626</li>
-</ul>
-<p>I&#8217;m waiting for Sean to start reviewing&nbsp;this.</p>
-<p>My next priority is to complete a pending <span class="caps">PR</span> on&nbsp;mirrors.</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-finished-refraction-at-planar-surface" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
