--- a/gsoc14-progress-week-12.html
+++ b/gsoc14-progress-week-12.html
@@ -10,25 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Last week I worked on utility functions which has been merged into the master.
-Currently I am working on converting my incopmlete <span class="caps">PR</span> related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I never saw use of too much 3D in their illustrations. Depending on the use cases we can consider adding it later after gsoc. As of now optics module can not be called complete and hence I&#8217;ll be working on it post&nbsp;gsoc.</p>
-<p>Few other things which I would like to complete this week are as&nbsp;follows:</p>
-<ul>
-<li>Interference</li>
-<li>Diffraction</li>
-<li>IPython notebooks for&nbsp;examples</li>
-</ul>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>Last week I worked on utility functions which has been merged into the master.
-Currently I am working on converting my incopmlete <span class="caps">PR</span> related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I never saw use of too much 3D in their illustrations. Depending on the use cases we can consider adding it later after gsoc. As of now optics module can not be called complete and hence I&#8217;ll be working on it post&nbsp;gsoc.</p>
-<p>Few other things which I would like to complete this week are as&nbsp;follows:</p>
-<ul>
-<li>Interference</li>
-<li>Diffraction</li>
-<li>IPython notebooks for&nbsp;examples</li>
-</ul>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-12" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
