--- a/gsoc14-progress-week-5.html
+++ b/gsoc14-progress-week-5.html
@@ -10,63 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>I did good amount of work this week. I sent a small part of it related
-to ray tracing for&nbsp;review.</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7626</li>
-</ul>
-<p>I got some great suggestions from Sean to make it compatible directly
-with<code>TWave</code> class.</p>
-<p>It is a <span class="caps">WIP</span> as I&#8217;m waiting for few 3D geometry classes. I&#8217;m also working
-on inteference of light waves and I hope that I&#8217;ll send it for review in
-next couple of days. My last <span class="caps">PR</span> on medium is still unmerged and I really
-need it to be in master to work on more&nbsp;implementations.</p>
-<p>I&#8217;m also trying to move <code>physics/gaussopt</code> to <code>physics/optics/gaussopt</code> as it&#8217;ll be good to keep things related to optics at the same place. I&#8217;m waiting for opinion of the community about it. Here&#8217;s the link to that
-<span class="caps">PR</span>:</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7607</li>
-</ul>
-<p>Here is some other minor work that I&#8217;ve done this week outside of&nbsp;optics:</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7609</li>
-<li>https://github.com/sympy/sympy/pull/7610</li>
-<li>https://github.com/sympy/sympy/pull/7612</li>
-<li>https://github.com/sympy/sympy/pull/7614</li>
-<li>https://github.com/sympy/sympy/pull/7627</li>
-<li>https://github.com/sympy/sympy/pull/7628</li>
-<li>https://github.com/sympy/sympy/pull/7629</li>
-</ul>
-<p>That&#8217;s all for&nbsp;now. Cheers!</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>I did good amount of work this week. I sent a small part of it related
-to ray tracing for&nbsp;review.</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7626</li>
-</ul>
-<p>I got some great suggestions from Sean to make it compatible directly
-with<code>TWave</code> class.</p>
-<p>It is a <span class="caps">WIP</span> as I&#8217;m waiting for few 3D geometry classes. I&#8217;m also working
-on inteference of light waves and I hope that I&#8217;ll send it for review in
-next couple of days. My last <span class="caps">PR</span> on medium is still unmerged and I really
-need it to be in master to work on more&nbsp;implementations.</p>
-<p>I&#8217;m also trying to move <code>physics/gaussopt</code> to <code>physics/optics/gaussopt</code> as it&#8217;ll be good to keep things related to optics at the same place. I&#8217;m waiting for opinion of the community about it. Here&#8217;s the link to that
-<span class="caps">PR</span>:</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7607</li>
-</ul>
-<p>Here is some other minor work that I&#8217;ve done this week outside of&nbsp;optics:</p>
-<ul>
-<li>https://github.com/sympy/sympy/pull/7609</li>
-<li>https://github.com/sympy/sympy/pull/7610</li>
-<li>https://github.com/sympy/sympy/pull/7612</li>
-<li>https://github.com/sympy/sympy/pull/7614</li>
-<li>https://github.com/sympy/sympy/pull/7627</li>
-<li>https://github.com/sympy/sympy/pull/7628</li>
-<li>https://github.com/sympy/sympy/pull/7629</li>
-</ul>
-<p>That&#8217;s all for&nbsp;now. Cheers!</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-5" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
