--- a/gsoc14-week-10-adding-more-to-utils.html
+++ b/gsoc14-week-10-adding-more-to-utils.html
@@ -10,25 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>This week I worked on adding more utility function in optics. Some of them are yet to be added. I&#8217;ll send a pull request once I write tests for&nbsp;them.</p>
-<p>Here&#8217;s the link to the code pushed till&nbsp;now:</p>
-<ul>
-<li>https://github.com/debugger22/sympy/compare/util-funcs</li>
-</ul>
-<p>I also worked on one of my pending <span class="caps">PR</span>(<a href="https://github.com/sympy/sympy/pull/7686">https://github.com/sympy/sympy/pull/7686</a>) parameterizing a 3D circle. This will make the implementation a bit&nbsp;easier.</p>
-<p>Tomorrow I&#8217;ll be going back to&nbsp;college.</p>
-<p>That&#8217;s all for now.&nbsp;Cheers!</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p>This week I worked on adding more utility function in optics. Some of them are yet to be added. I&#8217;ll send a pull request once I write tests for&nbsp;them.</p>
-<p>Here&#8217;s the link to the code pushed till&nbsp;now:</p>
-<ul>
-<li>https://github.com/debugger22/sympy/compare/util-funcs</li>
-</ul>
-<p>I also worked on one of my pending <span class="caps">PR</span>(<a href="https://github.com/sympy/sympy/pull/7686">https://github.com/sympy/sympy/pull/7686</a>) parameterizing a 3D circle. This will make the implementation a bit&nbsp;easier.</p>
-<p>Tomorrow I&#8217;ll be going back to&nbsp;college.</p>
-<p>That&#8217;s all for now.&nbsp;Cheers!</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-week-10-adding-more-to-utils" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
