--- a/top-hacker-news-archive.html
+++ b/top-hacker-news-archive.html
@@ -10,33 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | article.title" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p><a href="https://news.ycombinator.com/">Hacker News&#8217;</a> top 5 entries are some
-beautiful stories that can&#8217;t be missed by a technology enthusiast. The
-problem is <span class="caps">HN</span> gives more weight-age to the period of existence of a post
-and hence articles decay rapidly as time passes. I try my best to read
-most of them but it&#8217;s certainly not possible if you&#8217;ve got other things
-to do.&nbsp;:)</p>
-<p>To overcome this problem I wrote a small script to pull all those
-entries and save it for me even when I&#8217;m away. Perhaps this will help my
-obsession with hacker&nbsp;news.</p>
-<p>Once I have enough articles, I&#8217;ll host them on the web with real time
-addition of new articles for everyone. I&#8217;ll think about other good
-sources&nbsp;too.</p>" />
+        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | article.title" />
-        <meta name="twitter:description" content="<p><a href="https://news.ycombinator.com/">Hacker News&#8217;</a> top 5 entries are some
-beautiful stories that can&#8217;t be missed by a technology enthusiast. The
-problem is <span class="caps">HN</span> gives more weight-age to the period of existence of a post
-and hence articles decay rapidly as time passes. I try my best to read
-most of them but it&#8217;s certainly not possible if you&#8217;ve got other things
-to do.&nbsp;:)</p>
-<p>To overcome this problem I wrote a small script to pull all those
-entries and save it for me even when I&#8217;m away. Perhaps this will help my
-obsession with hacker&nbsp;news.</p>
-<p>Once I have enough articles, I&#8217;ll host them on the web with real time
-addition of new articles for everyone. I&#8217;ll think about other good
-sources&nbsp;too.</p>" />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/top-hacker-news-archive" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
